--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,6 +92,16 @@ body {
     margin-top: 0;
   }
 
+  /* Link styles */
+  a {
+    @apply text-blue-600;
+    cursor: pointer;
+
+    &:hover {
+      @apply underline;
+    }
+  }
+
   img {
     display: block;
     height: auto;
